--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "vue-router": "^4.3.0"
   },
   "devDependencies": {
+    "tailwindcss": "^3.4.3",
     "vite-plugin-vuetify": "^2.0.3",
     "vuetify": "^3.5.16"
   }
