conf: set MySQL

--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,5 @@
-MYSQL_HOST=localhost
+MYSQL_HOST=db
 MYSQL_ROOT_PASSWORD=root
-MYSQL_DATABASE=database
+MYSQL_DATABASE=forum
 MYSQL_USER=user
 MYSQL_PASSWORD=user_password
