--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,13 +5,13 @@ networks:
 
 services:
   db:
-    image: mariadb:10.4
+    image: mysql:8.3
     container_name: db
     environment:
-      MYSQL_ROOT_PASSWORD: ${MYSQL_ROOT_PASSWORD:-root}
-      MYSQL_DATABASE: ${MYSQL_DATABASE:-forum}
-      MYSQL_USER: ${MYSQL_USER:-user}
-      MYSQL_PASSWORD: ${MYSQL_PASSWORD:-password}
+      - MYSQL_ROOT_PASSWORD=${MYSQL_ROOT_PASSWORD:-root}
+      - MYSQL_DATABASE=${MYSQL_DATABASE:-forum}
+      - MYSQL_USER=${MYSQL_USER:-user}
+      - MYSQL_PASSWORD=${MYSQL_PASSWORD:-password}
     networks:
       - forum.net
     volumes:
@@ -20,8 +20,6 @@ services:
   adminer:
     image: adminer
     container_name: adminer
-    env_file:
-      - .env
     depends_on:
       - db
     ports:
