--- a/package.json
+++ b/package.json
@@ -15,11 +15,15 @@
     "mysql2": "^3.9.7",
     "nuxt": "^3.11.2",
     "vue": "^3.4.21",
-    "vue-router": "^4.3.0"
+    "vue-router": "^4.3.0",
+    "validator": "^13.11.0",
+    "bcrypt": "^5.1.1"
   },
   "devDependencies": {
     "@types/bluebird": "^3.5.42",
     "@types/node": "^20.12.7",
+    "@types/validator": "^13.11.9",
+    "@types/bcrypt": "^5.0.2",
     "tailwindcss": "^3.4.3",
     "vite-plugin-vuetify": "^2.0.3",
     "vuetify": "^3.5.16"
