init back and a bit of front

--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,13 @@
-MYSQL_HOST=db
-MYSQL_ROOT_PASSWORD=root
-MYSQL_DATABASE=forum
+# DATABASE
+MYSQL_HOST=localhost
+MYSQL_ROOT_PASSWORD=password
+MYSQL_DATABASE=database
 MYSQL_USER=user
 MYSQL_PASSWORD=user_password
+
+# BCRYPT
+BCRYPT_SALT=salt
+
+# BASE ADMIN
+ADMIN_USERNAME=admin_username
+ADMIN_PASSWORD=admin_password
