--- a/package.json
+++ b/package.json
@@ -11,21 +11,29 @@
   },
   "dependencies": {
     "@mdi/font": "^7.4.47",
+    "@pinia/nuxt": "^0.5.1",
+    "bcrypt": "^5.1.1",
     "bluebird": "^3.7.2",
-    "mysql2": "^3.9.7",
-    "nuxt": "^3.11.2",
-    "vue": "^3.4.21",
-    "vue-router": "^4.3.0",
+    "mysql2": "^3.9.3",
+    "nuxt": "^3.11.1",
+    "nuxt-server-utils": "^0.0.7",
     "validator": "^13.11.0",
-    "bcrypt": "^5.1.1"
+    "vue": "^3.4.21",
+    "vue-router": "^4.3.0"
   },
   "devDependencies": {
-    "@types/bluebird": "^3.5.42",
-    "@types/node": "^20.12.7",
-    "@types/validator": "^13.11.9",
+    "@nuxtjs/eslint-config-typescript": "^12.1.0",
+    "@nuxtjs/eslint-module": "^4.1.0",
+    "@nuxtjs/tailwindcss": "^6.11.4",
     "@types/bcrypt": "^5.0.2",
-    "tailwindcss": "^3.4.3",
+    "@types/bluebird": "^3.5.42",
+    "@types/validator": "^13.11.9",
+    "eslint": "^8.57.0",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-nuxt": "^4.0.0",
+    "eslint-plugin-prettier": "^5.1.3",
+    "prettier": "^3.2.5",
     "vite-plugin-vuetify": "^2.0.3",
-    "vuetify": "^3.5.16"
+    "vuetify": "^3.5.12"
   }
 }
