--- a/.env.example
+++ b/.env.example
@@ -3,11 +3,9 @@ MYSQL_HOST=localhost
 MYSQL_ROOT_PASSWORD=password
 MYSQL_DATABASE=database
 MYSQL_USER=user
-MYSQL_PASSWORD=user_password
-
+MYSQL_PASSWORD=password
 # BCRYPT
-BCRYPT_SALT=salt
-
+BCRYPT_SALT=secret
 # BASE ADMIN
-ADMIN_USERNAME=admin_username
-ADMIN_PASSWORD=admin_password
+ADMIN_USERNAME=admin
+ADMIN_PASSWORD=admin
